2010-11-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs/spellbook.cc: fix mana cost check (thanks malignantmanor; #3001287)

2010-11-20 Dominik Reichardt <dominus@users.sourceforge.net>
	* configure.ac, Makefile.common, msvc9/msvc_kludges.h, msvcstuff/msvc_kludges.h, 
	  win32/*.rc: changed version number to 1.5.0svn - the idea is to have even version 
	  numbers for final releases.
	* cheat.cc, usecode/intrinsics.cc: location cross on normal and cheat map is yellow again

2010-11-11  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* desktop/exult.desktop: apply changes from gentoo's exult package

2010-10-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs/eggs.cc, gameclk.cc: match night time with original (bug #3099477)

2010-10-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs/eggs.cc: fix nocturnal egg 12h/24h confusion. (Thanks to Malignant
	Manor on the forum)

2010-10-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* scale_*.cc: add missing guard bands. This should fix artifacts along the
	  bottom edge of the screen.

2010-10-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* scale_bilinear.cc, scale_2x.cc: add missing guard bands. This should fix
	  the bilinearplus crashes.

2010-10-13 Dominik Reichardt <dominus@users.sourceforge.net>
	* updated Documentation and FAQ and many other files to reflect an upcoming release of version 1.4.9RC1
	* NEWS: updated with what we've done the last six years
	* AUTHORS: added a couple of authors and changed some email addresses according to our "About Us" page
	* docs/release.txt: updated a bit
	 
2010-10-13  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: revert change from r6329 that made monsters attack only
	  rarely. Also added a FIXME, since the expressions involved don't do what
	  they seem to do.

2010-10-11  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>