@@ -1,5 +1,7 @@
 2010-11-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* objs/spellbook.cc: fix mana cost check (thanks malignantmanor; #3001287)
+	* actors.cc: don't make dying party members call guards
+	  (thanks malignantmanor; #3011711)
 
 2010-11-20 Dominik Reichardt <dominus@users.sourceforge.net>
 	* configure.ac, Makefile.common, msvc9/msvc_kludges.h, msvcstuff/msvc_kludges.h, 
